--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -15,7 +15,7 @@
   <div class="profile-name">
     <h3>{{ profile.get_full_name }}
     {% if edit or user|can:'edit_all_info' %}
-      <a href="{% url 'edit_info' profile.norm_name %}" class="btn btn-default profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Edit Profile</a>
+      <a href="{% url 'edit_info' profile.norm_name %}" class="btn btn-default profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit Profile</a>
     {% endif %}
   </h3>
   </div>
@@ -27,7 +27,9 @@
     {% if profile.class_year %}
       <p><span class="profile-contact-field">Class:</span> {{ profile.class_year }}</p>
     {% endif %}
-    <p><span class="profile-contact-field">Phone number:</span> {{ profile.phone_number|displayphone }}</p>
+    {% if profile.phone_number %}
+      <p><span class="profile-contact-field">Phone number:</span> {{ profile.phone_number|displayphone }}</p>
+    {% endif %}
     <p><span class="profile-contact-field">Email:</span> {{ profile.user.email }}</p>
     <p>Birthday: {{ profile.birthday|date:"F j" }}</p>
     {% if profile.hometown %}
