--- a/core/templates/core/staff.html
+++ b/core/templates/core/staff.html
@@ -12,7 +12,8 @@ Staff
 
 {% block content %}
 
-<div class="col-md-12">
+<div class="col-md-12 text-center">
+{% directory_header active %}
 {% for scholar_group in scholars|group_by:2 %}
 <div class="row">
   <div class="col-md-2"></div>
