--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -14,7 +14,7 @@
 <div>
   <div class="profile-name">
     <h3>{{ profile.get_full_name }}
-    {% if edit or user|can:'edit_all_info' %}
+    {% if is_self or user|can:'edit_all_info' %}
       <a href="{% url 'edit_info' profile.norm_name %}" class="btn btn-default profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit Profile</a>
     {% endif %}
   </h3>
@@ -27,11 +27,36 @@
     {% if profile.class_year %}
       <p><span class="profile-contact-field">Class:</span> {{ profile.class_year }}</p>
     {% endif %}
-    {% if profile.phone_number %}
-      <p><span class="profile-contact-field">Phone number:</span> {{ profile.phone_number|displayphone }}</p>
+    {% if is_self or user|has_role:'staff' or not mcuser|fieldhidden:'phone_number' %}
+      {% if profile.phone_number %}
+        <p>
+          <span class="profile-contact-field {% if profile|fieldhidden:'phone_number' %} staff-only {% endif %}">
+          Phone number:
+          </span>
+          {{ profile.phone_number|displayphone }}
+        </p>
+      {% endif %}
     {% endif %}
-    <p><span class="profile-contact-field">Email:</span> {{ profile.user.email }}</p>
-    <p>Birthday: {{ profile.birthday|date:"F j" }}</p>
+    {% if is_self or user|has_role:'staff' or not mcuser|fieldhidden:'email' %}
+      {% if profile.email %}
+        <p>
+          <span class="profile-contact-field {% if profile|fieldhidden:'email' %} staff-only {% endif %}">
+            Email:
+          </span>
+          {{ profile.email }}
+        </p>
+      {% endif %}
+    {% endif %}
+    {% if is_self or user|has_role:'staff' or not mcuser|fieldhidden:'birthday' %}
+      {% if profile.birthday %}
+        <p>
+          <span class="profile-contact-field {% if profile|fieldhidden:'birthday' %} staff-only {% endif %}">
+            Birthday:
+          </span>
+          {{ profile.birthday|date:"F j" }}
+        </p>
+      {% endif %}
+    {% endif %}
     {% if profile.hometown %}
       <p>Hometown: {{ profile.hometown }}</p>
     {% endif %}
@@ -108,7 +133,7 @@
 </div>
 {% endif %}
 
-{% if user|has_role:'staff' %}
+{% if is_self or user|has_role:'staff' %}
   <p><span class="staff-only">Orange fields</span> can only be seen by staff.</p>
 {% endif %}
 
