--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -17,7 +17,7 @@ McDermott Network
   </div>
   <form method="get" action="{% url 'search' %}">
     <div class="col-md-4 col-md-offset-4">
-      <input class="form-control" type="text" name="q"
+      <input style="padding-left: 10px" class="form-control search-bar" type="text" name="q"
              id="searchbox" placeholder="Search..."/>
     </div>
   </form>
