--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -18,6 +18,11 @@
       <a href="{% url 'edit_info' profile.norm_name %}" class="btn btn-default profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit Profile</a>
     {% endif %}
   </h3>
+  {% if profile.user|has_role:'staff' %}
+    {% if profile.staff_title %}
+      <h5 style="margin-top:-8px; margin-bottom: 25px">{{ profile.staff_title }}</h5>
+    {% endif %}
+  {% endif %}
   </div>
   {% thumbnail profile.pic "200x200" crop="center" as im %}
     <img class="profile-pic" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
@@ -27,11 +32,19 @@
     {% if profile.class_year %}
       <p><span class="profile-contact-field">Class:</span> {{ profile.class_year }}</p>
     {% endif %}
+    {% if profile.user|has_role:'staff' %}
+      {% if profile.staff_phone %}
+        <p>
+          <span class="profile-contact-field">Office Phone:</span>
+          {{ profile.staff_phone|displayphone }}
+        </p>
+      {% endif %}
+    {% endif %}
     {% if is_self or user|has_role:'staff' or not profile|fieldhidden:'phone_number' %}
       {% if profile.phone_number %}
         <p>
           <span class="profile-contact-field {% if profile|fieldhidden:'phone_number' %} staff-only {% endif %}">
-          Phone number:
+          Phone:
           </span>
           {{ profile.phone_number|displayphone }}
         </p>
@@ -57,14 +70,22 @@
         </p>
       {% endif %}
     {% endif %}
-    {% if profile.hometown %}
-      <p>Hometown: {{ profile.hometown }}</p>
+    {% if profile.hometown or profile.hometown_state %}
+      <p>Hometown:
+        {% if profile.hometown %}
+        {{ profile.hometown }}{% endif %}{% if profile.hometown and profile.hometown_state %},{% endif %}
+        {% if profile.hometown_state %}
+        {{ profile.hometown_state }}
+        {% endif %}
+      </p>
     {% endif %}
     {% if profile.high_school %}
       <p>High School: {{ profile.high_school }}</p>
     {% endif %}
     {% if user|has_role:'staff' %}
-      <p><span class="staff-only">UTD ID:</span> {{ profile.utd_id }}</p>
+      {% if profile.utd_id %}
+        <p><span class="staff-only">UTD ID:</span> {{ profile.utd_id }}</p>
+      {% endif %}
     {% endif %}
   </div>
 </div>
