made style changes to event pages

--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -8,31 +8,37 @@ Edit event
 
 {% block inner_content %}
 
-<form method="post" action="{{ form_url }}" class="form-horizontal">
+<form method="post" action="{{ form_url }}" class="form-horizontal padding-top-md">
 {% csrf_token %}
   {{ form.id }}
-  <div class="form-group margin-sm">
-    <label for="id_{{ form.subject.name }}" class="form-label">
-      Subject
-    </label>
-    {{ form.subject|add_class:"form-control" }}
-    <span class="errors">{{ form.subject.errors }}</span>
-  </div>
-  <div class="form-group margin-sm">
-    <label for="id_{{ form.description.name }}" class="form-label">
-      Description
-    </label>
-    {{ form.description|add_class:"form-control" }}
-    <span class="errors">{{ form.description.errors }}</span>
-  </div>
-  <div class="form-group margin-sm">
-    <label for="id_{{ form.location.name }}" class="form-label">
-      Location
-    </label>
-    {{ form.location|add_class:"form-control" }}
-    <span class="errors">{{ form.location.errors }}</span>
+  <div class="col-md-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.subject.name }}" class="form-label">
+        Title
+      </label>
+      {{ form.subject|add_class:"form-control" }}
+      <span class="errors">{{ form.subject.errors }}</span>
+    </div>
   </div>
   <div class="col-md-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.location.name }}" class="form-label">
+        Location
+      </label>
+      {{ form.location|add_class:"form-control" }}
+      <span class="errors">{{ form.location.errors }}</span>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.description.name }}" class="form-label">
+        Description
+      </label>
+      {{ form.description|add_class:"form-control" }}
+      <span class="errors">{{ form.description.errors }}</span>
+    </div>
+  </div>
+  <div class="col-md-3 col-sm-6">
     <div class="form-group margin-sm">
       <label for="id_{{ form.start_date.name }}">
         Start Date
@@ -41,16 +47,7 @@ Edit event
       <span class="errors">{{ form.start_date.errors }}</span>
     </div>
   </div>
-  <div class="col-md-6">
-    <div class="form-group margin-sm">
-      <label for="id_{{ form.start_time.name }}">
-        Start Time
-      </label>
-      {{ form.start_time|add_class:"form-control" }}
-      <span class="errors">{{ form.start_time.errors }}</span>
-    </div>
-  </div>
-  <div class="col-md-6">
+  <div class="col-md-3 col-sm-6">
     <div class="form-group margin-sm">
       <label for="id_{{ form.end_date.name }}">
         End Date
@@ -59,7 +56,16 @@ Edit event
       <span class="errors">{{ form.end_date.errors }}</span>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-3 col-sm-6">
+    <div class="form-group margin-sm">
+      <label for="id_{{ form.start_time.name }}">
+        Start Time
+      </label>
+      {{ form.start_time|add_class:"form-control" }}
+      <span class="errors">{{ form.start_time.errors }}</span>
+    </div>
+  </div>
+  <div class="col-md-3 col-sm-6">
     <div class="form-group margin-sm">
       <label for="id_{{ form.end_time.name }}">
         End Time
@@ -68,7 +74,9 @@ Edit event
       <span class="errors">{{ form.end_time.errors }}</span>
     </div>
   </div>
-  <input type="submit" value="Save" class="btn"/>
+  <div class="col-md-12 text-center margin-top-md">
+    <input type="submit" value="Save" class="btn btn-default"/>
+  </div>
 </form>
 
 <script>
