--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -57,9 +57,29 @@ a.no-dec {
   padding-bottom: 20px;
 }
 
+.padding-top-md {
+  padding-top: 20px;
+}
+.margin-top-sm {
+  margin-top: 10px;
+}
+
+.margin-top-md {
+  margin-top: 20px;
+}
+
 .margin-top-lg {
   margin-top: 30px;
 }
+
+.margin-bot-md {
+  margin-bottom: 20px;
+}
+
+.margin-top-lg {
+  margin-bottom: 30px;
+}
+
 
 .staff-only {
   color: #C75B12;
