--- a/mccalendar/templates/mccalendar/day.html
+++ b/mccalendar/templates/mccalendar/day.html
@@ -8,12 +8,12 @@ Calendar
 
 {% block inner_content %}
 
-<h4 class="center">{{ month_name }} {{ day }}, {{ year }}</h4>
+{# TODO: allow staff to create event from day (should populate view with current day for start date) #}
+<h3 class="center margin-top-lg margin-bot-lg">{{ month_name }} {{ day }}, {{ year }}</h3>
 {% for event in events %}
-  <p><a href="{% url 'mccalendar:event_detail' event.id %}">{{ event.subject }}</a> - {{ event.description }}</p>
+  <h5><a href="{% url 'mccalendar:event_detail' event.id %}">{{ event.subject }}</a> - {{ event.description }}</h5>
+  <br>
 {% endfor %}
-{% if user|has_role:'staff' %}
-  <a href="{% url 'mccalendar:create_event' %}" class="btn btn-default">Create event</a>
-{% endif %}
+
 
 {% endblock %}
