--- a/mccalendar/templates/mccalendar/event_detail.html
+++ b/mccalendar/templates/mccalendar/event_detail.html
@@ -8,13 +8,26 @@ Event detail
 
 {% block inner_content %}
 
-<h4>{{ event.subject }}</h4>
-<p>{{ event.start_date }}</p>
-<p>{{ event.start_time }} - {{ event.end_time }}</p>
-<p>{{ event.description }}</p>
-
-{% if user|has_role:'staff' %}
-  <a href="{% url 'mccalendar:edit_event' event.id %}">Edit event</a>
+<h3>{{ event.subject }}
+  {% if user|has_role:'staff' %}
+    <a href="{% url 'mccalendar:edit_event' event.id %}" class="btn btn-default profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit Event</a>
+  {% endif %}
+</h3>
+{% if event.start_date == event.end_date %}
+  <h4>
+    {{ event.start_date|date:"F j" }}{% if event.start_time %}, {{ event.start_time }}{% endif %}{% if event.end_time %} &mdash; {{ event.end_time }}{% endif %}
+  </h4>
+{% else %}
+  <h5>
+    {{ event.start_date|date:"F j" }}{% if event.start_time %}, {{ event.start_time }}{% endif %} &mdash;
+    {{ event.end_date|date:"F j" }}{% if event.end_time %}, {{ event.end_time }}{% endif %}
+  </h5>
+{% endif %}
+{% if event.location %}
+  <h5>Location: {{ event.location }}</h5>
+{% endif %}
+{% if event.description %}
+  <p style="font-size:18px;">{{ event.description }}</p>
 {% endif %}
 
 {% endblock %}
