--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -50,7 +50,8 @@ McDermott Network
 
   </form>
   <br>
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+  <script type="text/javascript">document.getElementById("id_username").focus();</script>
 </div>
 
 {% endif %}
