--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -45,7 +45,8 @@
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
   <br>
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+  <script type="text/javascript">document.getElementById("id_username").focus();</script>
 </div>
 
 {% endblock %}
