--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -42,14 +42,26 @@
               <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
               {# <li><a href="{% url 'documents' %}">Documents</a></li> #}
               <li><a href="{% url 'scholars' %}">Directory</a></li>
-              <li><a href="{% url 'own_profile' %}">Profile</a></li>
-              <li><a href="{% url 'logout' %}">Logout</a></li>
+
+              <!-- Begin Dropdown account button -->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{% url 'own_profile' %}">My Profile</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="{% url 'password_change' %}">Change Password</a></li>
+                  <li><a href="{% url 'logout' %}">Logout</a></li>
+                </ul>
+              </li>
+              <!-- End Dropdown account button -->
             {% endif %}
           </ul>
           {% if user.is_authenticated %}
-            <form method="get" action="{% url 'search' %}" class="navbar-form navbar-right">
-              <input type="text" name="q" id="searchbox" class="form-control" placeholder="Search..." value="{{ request.GET.q }}">
-            </form>
+            {% block searchbox %}
+              <form method="get" action="{% url 'search' %}" class="navbar-form navbar-right">
+                <input type="text" name="q" id="searchbox" class="form-control" placeholder="Search..." value="{{ request.GET.q }}">
+              </form>
+            {% endblock %}
           {% endif %}
         </div>
       </div>
