--- a/login/templates/registration/password_reset_email.html
+++ b/login/templates/registration/password_reset_email.html
@@ -1,4 +1,5 @@
-{% autoescape off %}{% if user.mcuser.activated %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% else %}Welcome to {{ site_name }}! An account has been created for you, so all you need to do is set a password.
+{% autoescape off %}{% if user.mcuser.activated %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.
+{% else %}Welcome to {{ site_name }}! An account has been created for you, so all you need to do is set a password.
 {% endif %}
 Your username is: {{ user.get_username }}
 
