--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -131,6 +131,9 @@
         {{ degree.school }}{% if degree.degree_type and degree.school %},{% endif %}
         {{ degree.degree_type }}
       </p>
+      {% if degree.start_time or degree.end_time %}
+        <p>{{ degree.start_time|date:"F Y" }}{% if degree.start_time and degree.end_time %} - {% endif %}{{ degree.end_time|date:"F Y" }}</p>
+      {% endif %}
       {% if degree.major1 or degree.major2 %}
         <p>
           Major{% if degree.major1 and degree.major2 %}s{% endif %}:
@@ -142,9 +145,6 @@
           Minor{% if degree.minor1 and degree.minor2 %}s{% endif %}:
           {{ degree.minor1 }}{% if degree.minor1 and degree.minor2 %}, {% endif %}{{ degree.minor2 }}
         </p>
-      {% endif %}
-      {% if degree.start_time or degree.end_time %}
-        <p>{{ degree.start_time|date:"F Y" }}{% if degree.start_time and degree.end_time %} - {% endif %}{{ degree.end_time|date:"F Y" }}</p>
       {% endif %}
     </div>
   {% endfor %}
@@ -175,7 +175,9 @@
         {% endif %}
       </p>
       {% if exp.description %}
-        <p class="description-pre">{{ exp.description }}</p>
+        <div class="profile-description">
+          {{ exp.description|pwrap|safe }}
+        </div>
       {% endif %}
     </div>
     {% endfor %}
@@ -208,7 +210,9 @@
         <p>Other locations: {{ study_abroad.other_locations }}</p>
       {% endif %}
       {% if study_abroad.description %}
-        <p class="description-pre">{{ study_abroad.description }}</p>
+        <div class="profile-description">
+          {{ study_abroad.description|pwrap|safe }}
+        </div>
       {% endif %}
     </div>
     {% endfor %}
@@ -216,7 +220,9 @@
 {% endif %}
 
 {% if is_self or user|has_role:'staff' %}
-  <p><span class="staff-only">Orange fields</span> can only be seen by staff.</p>
+  <div class="text-center">
+    <p><span class="staff-only">Orange fields</span> can only be seen by staff.</p>
+  </div>
 {% endif %}
 
 
