--- a/core/templates/core/edit_abroad.html
+++ b/core/templates/core/edit_abroad.html
@@ -125,7 +125,7 @@ Edit Study Abroad
 <script>
   var inputChanged = false;
   $(document).ready(function() {
-    $('#formAbroad input').change(function() {
+    $('#formAbroad input').on('input', function() {
       if(!inputChanged) {
         $('#messageContainer').empty();
         $('#messageContainer').append('<div class="alert alert-warning" role="alert">Don\'t forget to save your changes!</div>');
