--- a/core/templates/core/edit_info_staff.html
+++ b/core/templates/core/edit_info_staff.html
@@ -179,7 +179,7 @@ Edit Info
 <script>
   var inputChanged = false;
   $(document).ready(function() {
-    $('input').change(function() {
+    $('#formInfo input').on('input', function() {
       if(!inputChanged) {
         $('#messageContainer').empty();
         $('#messageContainer').append('<div class="alert alert-warning" role="alert">Don\'t forget to save your changes!</div>');
