remove Documents link from header temporarily

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -40,7 +40,7 @@
               <li><a href="{% url 'login' %}">Login</a></li>
             {% else %}
               <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
-              <li><a href="{% url 'documents:index' %}">Documents</a></li>
+              {# <li><a href="{% url 'documents:index' %}">Documents</a></li> #}
               <li><a href="{% url 'scholars' %}">Directory</a></li>
 
               <!-- Begin Dropdown account button -->
