--- a/core/templates/core/edit_info_staff.html
+++ b/core/templates/core/edit_info_staff.html
@@ -21,7 +21,7 @@ Edit Info
   <div id="messageContainer">
     {% if messages %}
       {% for message in messages %}
-        <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %} role="alert">{{ message|capfirst }}</div>
+        <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %} role="alert">{{ message|capfirst|safe }}</div>
       {% endfor %}
     {% endif %}
   </div>
